--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,3 +10,39 @@ services:
     image: redis:8.4.0
     ports:
       - "6379"
+
+  prometheus:
+    image: prom/prometheus:v3.9.1
+    hostname: prometheus
+    volumes:
+      - type: bind
+        source: ./prometheus/data
+        target: /prometheus
+        bind:
+          create_host_path: true
+      - type: bind
+        source: ./prometheus/prometheus.yml
+        target: /etc/prometheus/prometheus.yml
+    ports:
+      - 9090:9090
+
+  grafana:
+    image: grafana/grafana:12.3-ubuntu
+    hostname: grafana
+    ports:
+      - 3000:3000
+    restart: always
+    volumes:
+      - type: bind
+        source: grafana/data
+        target: /var/lib/grafana
+      - type: bind
+        source: grafana/etc/provisioning/datasources
+        target: /etc/grafana/provisioning/datasources
+      - type: bind
+        source: grafana/etc/provisioning/dashboards
+        target: /etc/grafana/provisioning/dashboards
+    environment:
+      GF_SECURITY_ADMIN_USER: 'admin'
+      GF_SECURITY_ADMIN_PASSWORD: 'admin'
+      GF_USERS_ALLOW_SIGN_UP: false
